--- a/weibo/src/main/webapp/WEB-INF/view/detail.html
+++ b/weibo/src/main/webapp/WEB-INF/view/detail.html
@@ -23,31 +23,7 @@
 
 <body>
     <!--  顶部导航栏 -->
-  <div class="nav">
-    <div class="nav-container">
-      <!-- logo -->
-      <div>
-        <img src="img/logo.jpg" alt="none" class="img-circle" style="height: 38px;width: 38px; float: left;">
-        <div style="float: left;font-size: 25px; font-weight:bold;font-style: italic;">weibo</div>
-      </div>
-      <!-- 搜索栏 -->
-      <div class="nav-search" >
-        <div><input type="text" class="" id="name" placeholder="请输入名称" style="padding-top: 5px; border: none; outline:none;"></div>
-        <a href="" class="glyphicon glyphicon-search" style="margin-top: 5px; font-size: 18px; "></a>
-      </div>
-      <!-- 选项栏 -->
-      <div class="nav-option">
-      <ul>
-        <li><i class="glyphicon glyphicon-home"></i>首页</li>
-        <li><i class="glyphicon glyphicon-envelope">消息</i></li>
-        <li><i class="glyphicon glyphicon-cog"></i>设置 </li>
-        <li><i class="glyphicon glyphicon-cog"></i>发现 </li>
-        <li><i class="glyphicon glyphicon-edit"></i>发微博</li>
-      </ul>
-        
-      </div>
-    </div>
-  </div>
+	<#include "/header/header.html">
   <style type="text/css">
     .red{
       background-color: red;
