--- a/weibo/src/main/webapp/WEB-INF/view/login.html
+++ b/weibo/src/main/webapp/WEB-INF/view/login.html
@@ -74,7 +74,7 @@
 				<div class="controls">
 					<div class="input-icon left">
 						<i class="fa fa-envelope-o"></i>
-						<input class="m-wrap placeholder-no-fix" type="text" placeholder="Email" name="email" />
+						<input class="m-wrap placeholder-no-fix" type="text" placeholder="Username" name="username" id="findPwdInput"/>
 					</div>
 				</div>
 			</div>
@@ -82,7 +82,7 @@
 				<button type="button" id="back-btn" class="btn_1 back-btn">
 				<i class="fa fa-arrow-circle-left"></i> Back
 				</button>
-				<button type="submit" class="btn_1 green pull-right">
+				<button type="button" class="btn_1 green pull-right" onclick="findPassword()">
 				Submit <i class="fa fa-arrow-circle-right"></i>
 				</button>            
 			</div>
