--- a/weibo/src/main/webapp/WEB-INF/view/set.html
+++ b/weibo/src/main/webapp/WEB-INF/view/set.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="${ctx}/3rd/bootstrap-3.3.7-dist/css/bootstrap.min.css" >
 
   <script src="${ctx}/3rd/bootstrap-3.3.7-dist/js/bootstrap.min.js" ></script>
+  <link href="${ctx}/css/index.css" rel="stylesheet" /> 
+  <script src="${ctx}/js/index.js"></script>
   <title>个人设置</title>
   <style>
   	* {
