--- a/weibo/src/main/webapp/WEB-INF/view/header/header.html
+++ b/weibo/src/main/webapp/WEB-INF/view/header/header.html
@@ -13,11 +13,12 @@
       <!-- 选项栏 -->
       <div class="nav-option">
       <ul>
-			<li><i class="glyphicon glyphicon-home"></i><a href="/index.do"></a>首页</li>
+			<li><i class="glyphicon glyphicon-home"></i><a href="/index.do">首页</a></li>
 			<li><i class="glyphicon glyphicon-envelope">消息</i></li>
 			<li><i class="glyphicon glyphicon-cog"></i><a href="/set/photo.do">设置</a> </li>
 			<li><i class="glyphicon glyphicon-cog"></i>发现 </li>
 			<li><i class="glyphicon glyphicon-edit"></i>发微博</li>
+			<li style="margin-left: 100px;"><i class="glyphicon glyphicon-edit"></i><a href="/exit.do">退出</a></li>
       </ul>
         
       </div>
