--- a/weibo/src/main/webapp/WEB-INF/view/img.html
+++ b/weibo/src/main/webapp/WEB-INF/view/img.html
@@ -89,13 +89,13 @@
   			<div class="category" style="">
   				<div style="padding: 5px 0px 5px 15px;">
   					<i class="glyphicon glyphicon-user" style="color: #8F9094;"></i>
-  					<a href="">我的信息</a>
+  					<a href="/set/info.do">我的信息</a>
   				</div>
   			</div>
   			<div class="category">
   				<div style="padding: 5px 0px 5px 15px;">
   					<i class="glyphicon glyphicon-camera" style="color: #8F9094;"></i>
-  					<a href="">头像</a>
+  					<a href="/set/img.do">头像</a>
   				</div>
   			</div>
   		</div>
