--- a/weibo/src/main/webapp/WEB-INF/view/info.html
+++ b/weibo/src/main/webapp/WEB-INF/view/info.html
@@ -24,7 +24,19 @@
  	 <!--  顶部导航栏 -->
 	<#include "/header/header.html">
 
+	<style>
+		.over{
+			background-color: #C7BDBD;
+		}
+		a{
+			text-decoration: none !important;
+			color: black;
+		}
+		a:hover {
+		 	color: black; /*鼠标经过的颜色变化*/
+		}		
 
+	</style>
   <div class="container" style="margin-top: 50px;width: 60%;border:1px solid #ccc;height: 500px;">
   	<div class="row">
   		<div class="col-md-2" style="border:1px solid #ccc;background-color: #F0F0F0;padding: 0;height: 500px;">
