--- a/weibo/src/main/webapp/WEB-INF/view/index.html
+++ b/weibo/src/main/webapp/WEB-INF/view/index.html
@@ -188,10 +188,11 @@
                     <img src="${ctx}/img/logo.jpg" alt="none" class="img-circle" style="height: 40px;width: 40px;">
                 </div>
                 <div class="my-name" style="text-align: center;">
+                	<input type="hidden" id="s-nickname" value="${user.nickname}">
                 	<input type="hidden" id="s-username" value="${user.username}">
                 	<input type="hidden" id="s-comment" value="${user.comment}">
                 	<input type="hidden" id="s-email" value="${user.email}">
-                    <h5 style="font-weight: bold;" id="h5-nickname"><a href="/set/detail/${user.username}.do">${user.nickname}</a> </h5>
+                    <h5 style="font-weight: bold;" id="h5-nickname"><a href="/detail/${user.username}.do">${user.nickname}</a> </h5>
                 </div>
                 <div class="my-fans">
                     <ul>
