人一急，写出来的代码，就会像坨屎

--- a/weibo/src/main/webapp/WEB-INF/view/index.html
+++ b/weibo/src/main/webapp/WEB-INF/view/index.html
@@ -191,7 +191,7 @@
                 	<input type="hidden" id="s-username" value="${user.username}">
                 	<input type="hidden" id="s-comment" value="${user.comment}">
                 	<input type="hidden" id="s-email" value="${user.email}">
-                    <h5 style="font-weight: bold;" id="h5-nickname"><a href="/set/detail/${user.username}.do">${user.nickname}</a> </h5>
+                    <h5 style="font-weight: bold;" id="h5-nickname"><a href="/detail/${user.username}.do">${user.nickname}</a> </h5>
                 </div>
                 <div class="my-fans">
                     <ul>
