--- a/weibo/src/main/webapp/WEB-INF/view/login.html
+++ b/weibo/src/main/webapp/WEB-INF/view/login.html
@@ -73,7 +73,7 @@
 			<div class="control-group">
 				<div class="controls">
 					<div class="input-icon left">
-						<i class="fa fa-envelope-o"></i>
+						<i class="icon-user"></i>
 						<input class="m-wrap placeholder-no-fix" type="text" placeholder="Username" name="username" id="findPwdInput"/>
 					</div>
 				</div>
@@ -132,7 +132,7 @@
 			<div class="control-group">
 				<div class="controls">
 					<label class="checkbox">
-					<input type="checkbox" name="tnc"/> I agree to the <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>
+					<input type="checkbox" name="tnc"/> I agree to the <a href="#"> Constitution of People's Republic of China</a> 
 					</label>  
 					<div id="register_tnc_error"></div>
 				</div>
