--- a/weibo/src/main/webapp/WEB-INF/view/index.html
+++ b/weibo/src/main/webapp/WEB-INF/view/index.html
@@ -185,9 +185,10 @@
         <div class="side-right">
             <div class="my-msg">
                 <div class="my-img" style="text-align: center;">
-                    <img src="${ctx}/img/logo.jpg" alt="none" class="img-circle" style="height: 40px;width: 40px;">
+                    <img src="${user.headimg}" alt="none" class="img-circle" style="height: 40px;width: 40px;">
                 </div>
                 <div class="my-name" style="text-align: center;">
+                	<input type="hidden" id="s-headimg" value="${user.headimg}">
                 	<input type="hidden" id="s-nickname" value="${user.nickname}">
                 	<input type="hidden" id="s-username" value="${user.username}">
                 	<input type="hidden" id="s-comment" value="${user.comment}">
@@ -233,54 +234,23 @@
                   项目简介
                 </div>
                 <div>
-                  服务端采用Spring+SpringMVC+Mybatis等框架
-                  将实现的功能
-                  <ul>
-                    <li>1.个人用户方面
-                      <ul>
-                        <li>
-                          1)注册登录找回密码
-                        </li>
-                        <li>
-                          2)修改个人信息，密码等
-                        </li>
-                      </ul>
-                    </li>
-                    <li>2.微博
-                      <ul>
-                        <li>
-                          1)发微博
-                        </li>
-                        <li>
-                          2)评论微博
-                        </li>
-                        <li>
-                          3)删除微博（未完成）
-                        </li>
-                      </ul>
-                    </li>
-                    <li>3.好友
-                      <ul>
-                        <li>
-                          1)关注
-                        </li>
-                        <li>
-                          2)移除粉丝
-                        </li>
-                      </ul>
-                    </li>
-                    <li>4.其他
-                      <ul>
-                        <li>
-                          1)实时微博消息推送（未完成）
-                        </li>
-                        <li>
-                          2)实时聊天系统（未完成）
-                        </li>
-                      </ul>
-                    </li>
-                    <li></li>
-                  </ul>
+                <span style="display: inline-block;width: 30px;"></span>本系统是一个精简版的新浪微博，包含了一些简单但核心的功能：譬如发布微博，评论微博，关注好友，个人信息查看等一系列功能。
+                  
+                  
+                </div>
+                <div style="text-align: center;font-weight: bold;font-size: 18px;">
+                  <i class="fa fa-codepen"></i> 
+                  技术简介
+                </div>
+                <div>
+                web框架：SpringMVC <br />
+                orm框架：Mybatis<br />
+                容器：Spring<br />
+                模板引擎：Freemarker<br />
+                数据库：Mysql<br />
+                图标插件：font-awesome<br />
+                弹出层：layer<br />
+                js框架：jQuery、Vue<br />
                 </div>
             </div>
         </div>
