--- a/weibo/src/main/webapp/WEB-INF/view/header/detail-head.html
+++ b/weibo/src/main/webapp/WEB-INF/view/header/detail-head.html
@@ -52,7 +52,9 @@
 
         <div class="detial_msg">
           
-          <div>浙江湖州</div>
-          <div>1995年1月1日</div>
+          <div style="padding: 20px;"><span style="width: 30px;display: inline-block;"></span>为了使页面显得饱满一些，我不得不在这里写上这样一段无关的文字。</div>
         </div>
+        
       </div>
+      
+<script src="${ctx}/3rd/layer-v3.1.0/layer.js"></script>
