--- a/weibo/src/main/webapp/WEB-INF/view/header/follow-module.html
+++ b/weibo/src/main/webapp/WEB-INF/view/header/follow-module.html
@@ -10,7 +10,7 @@
 	                  </div>
 	                  <div class="col-md-6" style="">
 	                    <div>
-	                      <h1 style="font-size: 20px;">${user.nickname}</h1>
+	                      <h1 style="font-size: 20px;"><a href="/detail/${user.username}.do">${user.nickname}</a></h1>
 	                    </div>
 	                    <div>
 	                      <span style="font-size: 12px;">关注
