--- a/weibo/src/main/webapp/WEB-INF/view/header/header.html
+++ b/weibo/src/main/webapp/WEB-INF/view/header/header.html
@@ -2,7 +2,7 @@
     <div class="nav-container">
       <!-- logo -->
       <div>
-        <img src="img/logo.jpg" alt="none" class="img-circle" style="height: 38px;width: 38px; float: left;">
+        <img src="/img/logo.jpg" alt="none" class="img-circle" style="height: 38px;width: 38px; float: left;">
         <div style="float: left;font-size: 25px; font-weight:bold;font-style: italic;">weibo</div>
       </div>
       <!-- 搜索栏 -->
@@ -15,10 +15,10 @@
       <ul>
 			<li><i class="glyphicon glyphicon-home"></i><a href="/index.do">首页</a></li>
 			<li><i class="glyphicon glyphicon-envelope">消息</i></li>
-			<li><i class="glyphicon glyphicon-cog"></i><a href="/set/info.do">设置</a> </li>
+			<li><i class="glyphicon glyphicon-cog"></i><a href="/set/info-msg.do">设置</a> </li>
 			<li><i class="glyphicon glyphicon-cog"></i>发现 </li>
 			<li><i class="glyphicon glyphicon-edit"></i>发微博</li>
-			<li style="margin-left: 100px;"><i class="glyphicon glyphicon-edit"></i><a href="/exit.do">退出</a></li>
+			<li style="margin-left: 100px;"><i class="glyphicon glyphicon-record"></i><a href="/exit.do">退出</a></li>
       </ul>
         
       </div>
