--- a/weibo/src/main/webapp/WEB-INF/view/index.html
+++ b/weibo/src/main/webapp/WEB-INF/view/index.html
@@ -234,12 +234,12 @@
                   项目简介
                 </div>
                 <div>
-                <span style="display: inline-block;width: 30px;"></span>本系统是一个精简版的新浪微博，包含了一些简单但核心的功能：譬如发布微博，评论微博，关注好友，个人信息查看等一系列功能。
+                <span style="display: inline-block;width: 30px;"></span>本系统是一个精简版的新浪微博，包含了一些简单但核心的功能：譬如发布微博，评论微博，关注好友，个人信息查看和修改等。
                   
                   
                 </div>
                 <div style="text-align: center;font-weight: bold;font-size: 18px;">
-                  <i class="fa fa-codepen"></i> 
+                  <i class="glyphicon glyphicon-star-empty"></i> 
                   技术简介
                 </div>
                 <div>
