--- a/weibo/src/main/webapp/WEB-INF/view/header/weibo-module.html
+++ b/weibo/src/main/webapp/WEB-INF/view/header/weibo-module.html
@@ -1,71 +1,29 @@
-<div id="weibo_div"  style="border: 1px solid #ccc;">
-              <my-follow-template v-for="user in users" v-bind:obj="user"> 
-              </my-follow-template>
-              
+<link href="${ctx}/css/index.css" rel="stylesheet" /> 
+<div>
+	<#list reqWeibo as weibo>
+	  <div class='weibo-body' style='' id="1">
+		<div class='inner'>
+		<div class='head-img'>
+		<img src='${weibo.userHeadimg}' alt='none' class='img-circle body-img'>
+		</div>
+		<div class='other'>
+		<div class='_username'>
+		${weibo.userNickname}
+		</div>
+		<div class='time'>
+		${weibo.publishTime?string('yyyy-MM-dd HH:mm:ss')}
+		</div>
+		<div class='area'>
+		${weibo.content}
+		<br><br>
+		</div>
+		</div>
+		<div class='menu'>
+		<ul>
+		<li> <a href='javascript:void(0)' class='four_a'><i class='fa fa-star-o'></i>收藏</a></li>
+		<li> <a href='javascript:void(0)' class='four_a'><i class='fa fa-share'></i>转发</a></li>
+		<li> <a href='javascript:void(0)' class='four_a'><i class='fa fa-commenting-o'></i> 回复</a></li>
+		<li> <a href='javascript:void(0)' class='four_a'><i class='fa fa-thumbs-o-up' name='like'></i>点赞</a></li>
+		</ul></div></div></div>
+	</#list>
 </div>
-<script>
-Vue.component('my-follow-template', {
-    props: ['obj'],
-    template: `<div id="3">
-                  <div class="col-md-2">
-                    <p style="text-align: center; margin-top: 20px;">
-                      <img src="img/logo.jpg" class="img-circle" style="height: 40px;width: 40px;" alt="">
-                    </p>
-                  </div>
-                  <div class="col-md-6" style="">
-                    <div>
-                      <h1 style="font-size: 20px;">miracle2</h1>
-                    </div>
-                    <div>
-                      <span style="font-size: 12px;">关注
-                          <em class="font_normal">{{obj.text}}</em>
-                      </span>
-                      <span style="font-size: 12px;">粉丝
-                          <em class="font_normal">3</em>
-                      </span>
-                      <span style="font-size: 12px;">微博
-                          <em class="font_normal">4</em>
-                      </span>
-                    </div>
-                    <div style="font-size: 12px;margin-top: 5px;">
-                      <span style="color: #808080">
-                        签名: 
-                      </span>
-                      dasd 
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <span v-if="obj.isComplete" class="follow-span">
-                      <i class="glyphicon glyphicon-sort each-follow-i">
-                      </i>
-                      <a href="" @click.prevent="unFollow">互相关注</a>
-                    </span>
-                    <span v-else class="follow-span">
-                      <i class="glyphicon glyphicon-ok" style="color: #FA7D3C"></i>
-                      <a href="" @click.prevent='follow'>已关注</a>
-                    </span>
-                  </div>
-                
-                  <div style="text-align: center;padding-left: 30px;padding-right: 30px;" class="col-md-12">
-                    <div style="border-top:1px  dashed #ccc; ">
-                    </div>
-                  </div>
-                </div>`,
-  }); // Vue.component
-
-  var followVue = new Vue({
-    el: '#follow_div',
-    data: {
-      users: [{
-        text: 'Learn Vue33',
-        isComplete: false
-      },{
-        text: 'Learn Vue44',
-        isComplete: true
-      }]
-    },
-    methods:{
-      
-    }
-  })
-  </script>
