--- a/weibo/src/main/webapp/WEB-INF/view/info-img.html
+++ b/weibo/src/main/webapp/WEB-INF/view/info-img.html
@@ -37,24 +37,7 @@
 
   <div class="container" style="margin-top: 50px;width: 60%;border:1px solid #ccc;height: 500px;">
   	<div class="row">
-  		<div class="col-md-2" style="border:1px solid #ccc;background-color: #F0F0F0;padding: 0;height: 500px;">
-			<div style="padding:15px 8px 8px 15px;font-size: 10px;color: #ccc;font-weight: bold;">
-				账号设置
-			</div>
-
-  			<div class="category" style="">
-  				<div style="padding: 5px 0px 5px 15px;">
-  					<i class="glyphicon glyphicon-user" style="color: #8F9094;"></i>
-  					<a href="/set/info.do">我的信息</a>
-  				</div>
-  			</div>
-  			<div class="category">
-  				<div style="padding: 5px 0px 5px 15px;">
-  					<i class="glyphicon glyphicon-camera" style="color: #8F9094;"></i>
-  					<a href="/set/img.do">头像</a>
-  				</div>
-  			</div>
-  		</div>
+  		<#include "/info-module/info-left.html">
 
   		<div class="col-md-10">
   			<div style="padding: 20px 20px 0 0px;font-weight: bold;">头像</div>
@@ -64,19 +47,15 @@
   			<form action="" id="file" enctype="multipart/form-data">
   				<input type="file" style="padding-left: 30px;margin-top: 100px;" name="file">
   			</form>
-  			<button onclick="uploadPic()" class="button">上传</button>
+  			<button onclick="uploadPic()" class="button" style="margin-left: 50px;margin-top: 10px;">上传</button>
   		</div>
   	</div>
   </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+<script src="${ctx}/3rd/layer-v3.1.0/layer.js"></script>
 <script>
-	$(".category").mouseover(function(){
-	  $(this).addClass("over");
-	});
-	$(".category").mouseout(function(){
-	  $(this).removeClass("over");
-	});
+
 	
 	function uploadPic() { 
 		var data = new FormData($('#file')[0]);
@@ -88,9 +67,9 @@
 		   contentType:false, 
 		   success:function(res){ 
 		     if(res.success){ 
-		       	alert("上传成功！"); 
+		    	layer.msg('上传成功，重新登录后生效。', {icon: 1});
 		     }else{
-		    	alert(res.message); 
+		    	layer.msg(res.message, {icon: 5});
 		     } 
 		    
 		   }, 
@@ -98,6 +77,6 @@
 		    alert("网络连接失败,稍后重试",err); 
 		   } 
 		}) 
-} 
+	} 
 </script>
 </html>
