1.解决xxs 2.解决ajax，身份过期 响应

--- a/weibo/src/main/webapp/WEB-INF/view/index.html
+++ b/weibo/src/main/webapp/WEB-INF/view/index.html
@@ -279,7 +279,10 @@
 </body>
 <script src="${ctx}/js/utils/map.js"></script>
 <script src="${ctx}/js/utils/utils-date.js"></script>
+<script src="${ctx}/3rd/layer-v3.1.0/layer.js"></script>
+<script src="${ctx}/js/utils/common.js"></script>
 <script src="${ctx}/js/index.js"></script>
+
 <script>
     var a = $(".side-nav").css("top");
     window.onscroll = function() {
