--- a/weibo/src/main/webapp/WEB-INF/view/detail.html
+++ b/weibo/src/main/webapp/WEB-INF/view/detail.html
@@ -133,6 +133,7 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
 <script src="${ctx}/js/detail.js"></script>
+<script src="${ctx}/js/utils/common.js"></script>
 <script>
 	var detUuid = "${detUser.uuid}"
 	var btnVue = new Vue({
