--- a/weibo/src/main/webapp/WEB-INF/view/info-msg.html
+++ b/weibo/src/main/webapp/WEB-INF/view/info-msg.html
@@ -99,6 +99,7 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
 <script src="${ctx}/3rd/layer-v3.1.0/layer.js"></script>
+<script src="${ctx}/js/utils/common.js"></script>
 <script>
 
 	
